<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <Spinner
        android:id="@+id/spinner"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price: " />
    <EditText
        android:id="@+id/price_box"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Volume (in FL OZ): " />
    <EditText
        android:id="@+id/vol_box"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:layout_margin="@dimen/margin"/>

    <Button
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/priceResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>


</LinearLayout>